Fix scrollbar

--- a/05-calculator/src/css/index.css
+++ b/05-calculator/src/css/index.css
@@ -102,6 +102,7 @@ button {
 /* chrome */
 ::-webkit-scrollbar {
   background-color: transparent;
+  width: 4px;
   height: 4px;
 }
 
